--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,15 +23,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
+  dartz: ^0.9.1
+  freezed_annotation: ^0.7.1
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+  build_runner:
+  freezed: ^0.10.9
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
