--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   dartz: ^0.9.1
   freezed_annotation: ^0.7.1
   flutter_bloc: ^4.0.0
+  get_it: ^4.0.2
+  injectable: ^0.4.0+1
   # firebase
   firebase_core: ^0.4.5
   firebase_analytics: ^5.0.14
@@ -35,6 +37,8 @@ dependencies:
 dev_dependencies:
   build_runner:
   freezed: ^0.10.9
+  lint: ^1.2.0
+  injectable_generator: ^0.4.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
