--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   flutter_bloc: ^4.0.0
   get_it: ^4.0.2
   injectable: ^0.4.0+1
+  flushbar: ^1.10.4
   # firebase
   firebase_core: ^0.4.5
   firebase_analytics: ^5.0.14
