--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   get_it: ^4.0.2
   injectable: ^0.4.0+1
   flushbar: ^1.10.4
+  uuid: ^2.0.4
   # firebase
   firebase_core: ^0.4.5
   firebase_analytics: ^5.0.14
