--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   injectable: ^0.4.0+1
   flushbar: ^1.10.4
   uuid: ^2.0.4
+  auto_route: ^0.5.0
   # firebase
   firebase_core: ^0.4.5
   firebase_analytics: ^5.0.14
@@ -41,6 +42,7 @@ dev_dependencies:
   freezed: ^0.10.9
   lint: ^1.2.0
   injectable_generator: ^0.4.1
+  auto_route_generator: ^0.5.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
