--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flushbar: ^1.10.4
   uuid: ^2.0.4
   auto_route: ^0.5.0
+  kt_dart: ^0.7.0+1
   # firebase
   firebase_core: ^0.4.5
   firebase_analytics: ^5.0.14
