--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,11 +32,13 @@ dependencies:
   uuid: ^2.0.4
   auto_route: ^0.5.0
   kt_dart: ^0.7.0+1
+  json_annotation: ^3.0.1
   # firebase
   firebase_core: ^0.4.5
   firebase_analytics: ^5.0.14
   firebase_auth: ^0.16.1
   google_sign_in: ^4.5.1
+  cloud_firestore: ^0.13.6
 
 dev_dependencies:
   build_runner:
@@ -44,6 +46,7 @@ dev_dependencies:
   lint: ^1.2.0
   injectable_generator: ^0.4.1
   auto_route_generator: ^0.5.0
+  json_serializable: ^3.3.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
