--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   auto_route: ^0.5.0
   kt_dart: ^0.7.0+1
   json_annotation: ^3.0.1
+  rxdart: ^0.24.1
   # firebase
   firebase_core: ^0.4.5
   firebase_analytics: ^5.0.14
