--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   kt_dart: ^0.7.0+1
   json_annotation: ^3.0.1
   rxdart: ^0.24.1
+  flutter_hooks: ^0.12.0
   # firebase
   firebase_core: ^0.4.5
   firebase_analytics: ^5.0.14
