--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,31 +24,31 @@ dependencies:
   flutter:
     sdk: flutter
   dartz: ^0.9.1
-  freezed_annotation: ^0.7.1
-  flutter_bloc: ^4.0.0
-  get_it: ^4.0.2
-  injectable: ^0.4.0+1
+  freezed_annotation: ^0.11.0+1
+  flutter_bloc: ^6.0.1
+  get_it: ^4.0.4
+  injectable: ^1.0.4
   flushbar: ^1.10.4
-  uuid: ^2.0.4
-  auto_route: ^0.6.1
+  uuid: ^2.2.0
+  auto_route: ^0.6.7
   kt_dart: ^0.7.0+1
   json_annotation: ^3.0.1
   rxdart: ^0.24.1
-  flutter_hooks: ^0.12.0
+  flutter_hooks: ^0.13.0
   # firebase
   firebase_core: ^0.4.5
-  firebase_analytics: ^5.0.14
+  firebase_analytics: ^5.0.16
   firebase_auth: ^0.16.1
   google_sign_in: ^4.5.1
-  cloud_firestore: ^0.13.6
+  cloud_firestore: ^0.13.7
 
 dev_dependencies:
   build_runner:
-  freezed: ^0.10.9
+  freezed: ^0.11.5
   lint: ^1.2.0
-  injectable_generator: ^0.4.1
-  auto_route_generator: ^0.6.0
-  json_serializable: ^3.3.0
+  injectable_generator: ^1.0.4
+  auto_route_generator: ^0.6.8
+  json_serializable: ^3.4.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
