--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   json_annotation: ^3.0.1
   rxdart: ^0.24.1
   flutter_hooks: ^0.13.0
+  provider: ^4.3.2+2
   # firebase
   firebase_core: ^0.5.0
   firebase_analytics: ^6.0.0
@@ -43,7 +44,7 @@ dependencies:
   cloud_firestore: ^0.14.0+2
 
 dev_dependencies:
-  build_runner:
+  build_runner: null
   freezed: ^0.11.5
   lint: ^1.2.0
   injectable_generator: ^1.0.4
@@ -52,7 +53,6 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
   # The following line ensures that the Material Icons font is
